--- a/index.html
+++ b/index.html
@@ -2,9 +2,23 @@
 <html>
 <body>
 
-<h1>Alex Ovechkin</h1>
+<h1>HTML</h1>
 
-<p>My first paragraph.</p>
+<p>HyperText Markup Language, commonly referred to as HTML, is the standard markup language used to create web pages.
+HTML was created by Tim Berners-Lee. HTML is widely popular today as almost all websites use HTML as a way to relate and connect 
+different types of information. HTML can be used to display basic text, images, videos, etc. HTML links are commonly seen online as
+the blue underlined words or phrases that can be clicked on in order to reach a specific destination.</p>
+
+<!-- HTML also uses comments like this in order for the user to communicate a message to anyone viewing the source code. 
+Comments are not seen in the actual HTML page.-->
+
+<p1>Here is an example of an HTML page.</p1>
+
+<img src="http://www.w3schools.com/html/img_chrome.png" />
+
+<p2>Here is a short video of what HTML is.</p2>
+
+<iframe width="640" height="360" src="<iframe width="854" height="480" src="https://www.youtube.com/embed/CKlh1lwe2rY" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
