--- a/index.html
+++ b/index.html
@@ -12,14 +12,13 @@ the blue underlined words or phrases that can be clicked on in order to reach a 
 <!-- HTML also uses comments like this in order for the user to communicate a message to anyone viewing the source code. 
 Comments are not seen in the actual HTML page.-->
 
-<p1>Here is an example of an HTML page.
-</p1>
+<p1>Here is an example of an HTML page.</p1>
 
 <img src="http://www.w3schools.com/html/img_chrome.png" />
 
 <p2>Here is a short video of what HTML is.</p2>
 
-<iframe width="420" height="315"src="<iframe width="854" height="480" src="https://www.youtube.com/embed/CKlh1lwe2rY" frameborder="0" allowfullscreen></iframe>"></iframe>
+<iframe width="640" height="360" src="https://www.youtube.com/embed/CKlh1lwe2rY" frameborder="0" allowfullscreen></iframe>
 
 </body>
 </html>
